SMHE-1850: remove translateDlmsObjectType
Signed-off-by: Andre Bolder <andre.bolder@alliander.com>