@@ -4,7 +4,6 @@
 
 package org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.alarm;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
@@ -102,7 +101,7 @@ class SetAlarmNotificationsCommandExecutorRegister3Test {
         new AttributeAddress(1, "0.0.97.98.12.255", 2), DataObject.newInteger32Data(0));
 
     final List<AlarmTypeDto> alarmTypes =
-        Arrays.stream(alarmTypesInput.split(";")).map(AlarmTypeDto::valueOf).collect(toList());
+        Arrays.stream(alarmTypesInput.split(";")).map(AlarmTypeDto::valueOf).toList();
     final AccessResultCode res =
         this.execute(
             device,
@@ -132,7 +131,7 @@ class SetAlarmNotificationsCommandExecutorRegister3Test {
         new AttributeAddress(1, "0.0.97.98.12.255", 2), DataObject.newInteger32Data(3));
 
     final List<AlarmTypeDto> alarmTypes =
-        Arrays.stream(alarmTypesInput.split(";")).map(AlarmTypeDto::valueOf).collect(toList());
+        Arrays.stream(alarmTypesInput.split(";")).map(AlarmTypeDto::valueOf).toList();
     final AccessResultCode res =
         this.execute(
             device,
@@ -229,11 +228,9 @@ class SetAlarmNotificationsCommandExecutorRegister3Test {
   }
 
   private AttributeAddress getAttributeAddress(final String obisCode) {
-    final AttributeAddress attributeAddress =
-        new AttributeAddress(
-            InterfaceClass.REGISTER.id(),
-            new ObisCode(obisCode),
-            RegisterAttribute.VALUE.attributeId());
-    return attributeAddress;
+    return  new AttributeAddress(
+        InterfaceClass.REGISTER.id(),
+        new ObisCode(obisCode),
+        RegisterAttribute.VALUE.attributeId());
   }
 }
